💄(changelist) fix layout issue with Django > 3.1.1 (#426)
Since Django 3.1.2, changelist block is a flex element. This change
breaks djangocms admin styles.

https://github.com/django/django/commit/8ee4bb6ffcb3346c0fa8fb194986fbf9edadc822

--- a/djangocms_admin_style/sass/components/_changelist.scss
+++ b/djangocms_admin_style/sass/components/_changelist.scss
@@ -59,6 +59,7 @@
         }
     }
     #changelist {
+        display: block;
         width: auto !important;
         #action-toggle {
             vertical-align: middle;
@@ -106,6 +107,17 @@
             }
             .actions {
                 margin-right: $filtered-filter-width !important;
+            }
+
+            .changelist-form-container {
+                position: relative;
+                display: inline-block;
+                width: calc(100% - #{$filter-changelist-margin}) !important;
+
+                .results + .paginator {
+                    box-sizing: border-box;
+                    width: 100% !important;
+                }
             }
         }
         table {
